--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sudarshan Kriya: The Ultimate Bio-Hack</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link href="images/SriSriRavishankar.jpeg" rel="stylesheet">
     <style>
         body {
             font-family: 'Roboto', sans-serif;
