--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sudarshan Kriya: The Ultimate Bio-Hack</title>
-    <link href="images/SriSriRavishankar.png" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
             font-family: 'Roboto', sans-serif;
@@ -126,7 +126,7 @@
 <body>
 
     <div class="container">
-        <img src="http://googleusercontent.com/image_generation_content/0" alt="Sri Sri Ravishankar meditating cartoon" class="header-image">
+        <img src="images/SriSriRavishankar.png" alt="Sri Sri Ravishankar meditating cartoon" class="header-image">
 
         <h1>The Ultimate Bio-Hack: Anxiety Melt, Focus Boost, Immunity Upgrade</h1>
 
