--- a/index.html
+++ b/index.html
@@ -128,19 +128,19 @@
     <div class="container">
         <img src="images/SriSriRavishankar.png" alt="Sri Sri Ravishankar meditating cartoon" class="header-image">
 
-        <h1>The Ultimate Bio-Hack: Anxiety Melt, Focus Boost, Immunity Upgrade</h1>
+        <h1>The Ultimate Bio-Hack: Melt Anxiety, Boost Focus, Upgrade Immunity</h1>
 
-        <p>Ever wondered about a genuine **"bio-hack"** to melt away anxiety, sharpen focus, and upgrade your immunity?</p>
+        <p>Ever wondered about a genuine <b>"bio-hack"</b> to melt away anxiety, sharpen focus, and upgrade your immunity?</p>
         <p>The answer isn't in a pill or an app—it's right under your nose.</p>
 
         <h2>Sudarshan Kriya (SKY)</h2>
-        <p><strong>Sudarshan Kriya (SKY)</strong>, the powerful rhythmic breathing technique developed by Sri Sri Ravi Shankar, uses specific cycles of breath to mechanically harmonize your body and mind. This isn't conjecture; it's **evidence-based science**.</p>
+        <p><strong>Sudarshan Kriya (SKY)</strong>, the powerful rhythmic breathing technique developed by Sri Sri Ravi Shankar, uses specific cycles of breath to mechanically harmonize your body and mind. This isn't conjecture; it's <b>evidence-based science</b>.</p>
 
         <p>Independent studies have shown that this technique achieves what meditation often takes years to master:</p>
 
         <ul>
-            <li>**Stress Deletion:** It slashes cortisol (the stress hormone) by up to **56%**.</li>
-            <li>**System Upgrade:** It significantly boosts the immune system from the inside out.</li>
+            <li><b>Stress Deletion:</b> It slashes cortisol (the stress hormone) by up to <b>56%</b>.</li>
+            <li><b>System Upgrade:</b> It significantly boosts the immune system from the inside out.</li>
         </ul>
 
         <p>The Art of Living's SKY program gives you the superpower to reset your nervous system on command. Come, gift yourself the ability to walk through life with an unshakeable, smiling calm.</p>
@@ -149,10 +149,11 @@
 
         <div class="video-container">
             <iframe 
-                src="https://www.youtube.com/embed/AU3NUf0thpk?rel=0" 
-                title="Gurudev on Sudarshan Kriya" 
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-                allowfullscreen>
+                width="560" height="315" 
+                src="https://www.youtube.com/embed/F4S_4jX0ERA?si=cs8Fs_4hQK2_DPQ0" 
+                title="YouTube video player" 
+                frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
             </iframe>
         </div>
         
