--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 <body>
 
     <div class="container">
-        <img src="images/SriSriRavishankar.png" alt="Sri Sri Ravishankar meditating cartoon" class="header-image">
+        <img src="images/SriSriRavishankar.jpg" alt="Sri Sri Ravishankar meditating cartoon" class="header-image">
 
         <h1>The Ultimate Bio-Hack: Melt Anxiety, Boost Focus, Upgrade Immunity</h1>
 
