--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         
         <p class="cta">Ready to unlock your superpower?</p>
         
-        <a href="#dummy-link" class="info-link">Get FREE Info & Register for the Next Workshop</a>
+        <a href="https://vidushaka.github.io/guided-meditation/" class="info-link">Fill out this form so we can schedule you in an upcoming workshop!</a>
 
     </div>
 
