--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                alt="Sri Sri Ravishankar meditating cartoon"
                class="header-image">
         
-          <img src="images/qr-code.png"
+          <img src="images/AoL qr-code.png"
                alt="Scan QR code"
                class="qr-overlay">
         </div>
